# rule-engine

./: .gitignore  Makefile  README.md  cytora-backend-challenge.md  pyproject.toml
.github/workflows/: main.yaml  pypi.yml
src/: solution.py
src/rule_engine/: __init__.py  rule.py  utils.py
src/rule_engine/tests/: test_rule_engine.py  test_utils.py
